--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -20,6 +20,8 @@
         </script>
     </h:head>
     <h:body>
+        <!-- メッセージを出す場合は、ボタンのupdate属性にgrowlをつける -->
+        <p:growl id="growl" life="3000" globalOnly="true"  showDetail="true"/>
         <!-- ページ内容 -->
         <ui:insert name="content"/>
         
