--- a/web/templateEach.xhtml
+++ b/web/templateEach.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
@@ -81,8 +80,9 @@
                     <h:form id="id_menu_form">
                         <p:panelMenu style="width:200px">
                             <p:submenu label="メニュー">
-                                <p:menuitem value="B0010" outcome="/b/b0010" icon="pi pi-save" ajax="false"/>
-                                <p:menuitem value="B0020" outcome="/b/b0020" icon="pi pi-refresh" ajax="false"/>
+                                <p:menuitem value="B0010" outcome="/b/b0010" icon="pi pi-save" ajax="false" rendered="#{facesContext.externalContext.isUserInRole('ADMIN')}"/>
+                                <p:menuitem value="B0020" outcome="/b/b0020" icon="pi pi-refresh" ajax="false" rendered="#{facesContext.externalContext.isUserInRole('ADMIN')}"/>
+                                <p:menuitem value="C0010" outcome="/c/c0010" icon="pi pi-refresh" ajax="false" rendered="#{facesContext.externalContext.isUserInRole('STAFF')}"/>
                             </p:submenu>
                             <p:submenu label="メニュー２">
                                 <p:menuitem value="メニュー１" icon="pi pi-save" />
