--- a/web/c/c0010.xhtml
+++ b/web/c/c0010.xhtml
@@ -10,6 +10,10 @@
     </h:head>
     <h:body>
         <ui:composition template="/templateEach.xhtml">
+            <ui:define name="headEach">
+                <h:outputStylesheet library="css" name="c0010.css"/>
+            </ui:define>
+            
             <ui:define name="contentEach">
                 <h:form id="id_c0010_form" prependId="false">
                     <div id="id_c0010_detail">
