--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -43,6 +43,7 @@
         <div id="load_icon">
             <i class="pi pi-spin pi-spinner" style="font-size: 6em; display: none;" id="loading"></i>
         </div>
+        <p:ajaxStatus onstart="loadStart()" oncomplete="loadEnd()"/>
     </h:body>
 </html>
 
