PDFを結合して表示する

--- a/web/templatePdf.xhtml
+++ b/web/templatePdf.xhtml
@@ -15,7 +15,7 @@
             <ui:define name="content">
                 <div id="pdfContainer">
                     <p:media id="leftPdf" value="#{b0010.pdfDownloadFile}" player="pdf" width="100%" height="900px"/>
-                    <p:media id="rightPdf" value="#{b0010.pdfDownloadFile}" player="pdf" width="100%" height="900px"/>
+                    <p:media id="rightPdf" value="#{b0010.pdfDownloadFile2}" player="pdf" width="100%" height="900px"/>
                 </div>
             </ui:define>
         </ui:composition>
