--- a/web/c/c0020.xhtml
+++ b/web/c/c0020.xhtml
@@ -13,19 +13,24 @@
             <ui:define name="headEach">
                 <h:outputStylesheet library="css" name="c0020.css"/>
                 <script>
-                    function setHoliday() {
-                        let holidays = [#{c0020.holidays}];
-                        holidays.forEach((holiday) => {
-                            $('[data-date=' + holiday[0] + ']').addClass("fc-holiday");
-                            $('[data-date=' + holiday[0] + '].fc-day-top').children('span.holiday-name').remove();
-                            $('[data-date=' + holiday[0] + '].fc-day-top').prepend('<span class="holiday-name">' + holiday[1] + '</span>');
-                        });
+                    function initSchedule() {
+                        this.cfg.loading = function (isLoading) {
+                            //ロードが終了したときに実行
+                            if (!isLoading) {
+                                let holidays = [#{c0020.holidays}];
+                                holidays.forEach((holiday) => {
+                                    $('[data-date=' + holiday[0] + ']').addClass("fc-holiday");
+                                    $('[data-date=' + holiday[0] + '].fc-day-top').children('span.holiday-name').remove();
+                                    $('[data-date=' + holiday[0] + '].fc-day-top').prepend('<span class="holiday-name">' + holiday[1] + '</span>');
+                                });
+                            }
+                        }
                     }
                 </script>
             </ui:define>
             <ui:define name="contentEach">
                 <h:form>
-                    <p:schedule value="#{c0020.model}" rightHeaderTemplate="" widgetVar="myschedule" draggable="false" resizable="false" locale="ja">
+                    <p:schedule value="#{c0020.model}" rightHeaderTemplate="" widgetVar="myschedule" draggable="false" resizable="false" locale="ja" extender="initSchedule">
                         <p:ajax event="dateSelect" listener="#{c0020.onDateSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
                         <p:ajax event="eventSelect" listener="#{c0020.onEventSelect}" update="eventDetails" oncomplete="PF('eventDialog').show();" />
                     </p:schedule>
@@ -53,8 +58,6 @@
                         </h:panelGrid>
                     </p:dialog>
                 </h:form>
-                
-                <p:ajaxStatus oncomplete="setHoliday()"/>
             </ui:define>
         </ui:composition>
     </h:body>
