見栄え調整

--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta name="viewport" content="width=device-width"/>
-        <title>サンプル</title>
+        <title>23条照会</title>
         <link rel="shortcut icon" type="image/x-icon" href="#{request.contextPath}/resources/img/favicon.png"/>
         <h:outputStylesheet library="css" name="theme.css"/>
         <h:outputStylesheet library="css" name="main.css"/>
