--- a/web/templateEach.xhtml
+++ b/web/templateEach.xhtml
@@ -63,7 +63,7 @@
                 <p:graphicImage id="id_title_logo" library="img" name="logo2.png"/>
                 
                 <header>
-                    <h2>システム</h2>
+                    <h2>23条照会</h2>
                 </header>
                 
                 <div id="userIcon">
