--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -23,9 +23,10 @@
                     <p:graphicImage library="img" name="logo.png"/>
                 </figure>
                 
+                <h1>23条照会</h1>
+                
                 <section>
                     <h:form prependId="false" id="id_form">
-                        <p:messages id="msgs" closable="true" globalOnly="true"/>
                         <div id="id_form_panel">
                             <span class="ui-float-label">
                                 <p:inputText id="id_loginId" value="#{a0010.loginId}" />
@@ -35,7 +36,7 @@
                                 <p:password id="id_password" value="#{a0010.password}" class="allow_submit" size="40"/>
                                 <p:outputLabel for="@previous" value="パスワード" />
                             </span>
-                            <p:commandButton action="#{a0010.login()}" value="ログイン" update="id_form" icon="pi pi-sign-in" style="width:256px;"/>
+                            <p:commandButton action="#{a0010.login()}" value="ログイン" update="id_form growl" icon="pi pi-sign-in" style="width:256px;"/>
                         </div>
                     </h:form>
                 </section>
